Add CommitError struct

--- a/src/storage/v2/CMakeLists.txt
+++ b/src/storage/v2/CMakeLists.txt
@@ -1,5 +1,6 @@
 set(storage_v2_src_files
     commit_log.cpp
+    commit_error.cpp
     constraints.cpp
     temporal.cpp
     durability/durability.cpp
