--- a/tests/e2e/monitoring_server/workloads.yaml
+++ b/tests/e2e/monitoring_server/workloads.yaml
@@ -1,15 +1,15 @@
-cert_file: &cert_file "$PROJECT_DIR/tests/e2e/websocket/memgraph-selfsigned.crt"
-key_file: &key_file "$PROJECT_DIR/tests/e2e/websocket/memgraph-selfsigned.key"
+cert_file: &cert_file "$PROJECT_DIR/tests/e2e/monitoring_server/memgraph-selfsigned.crt"
+key_file: &key_file "$PROJECT_DIR/tests/e2e/monitoring_server/memgraph-selfsigned.key"
 bolt_port: &bolt_port "7687"
 monitoring_port: &monitoring_port "7444"
 template_cluster: &template_cluster
   cluster:
-    websocket:
+    monitoring:
       args: ["--bolt-port=7687", "--log-level=TRACE", "--"]
-      log_file: "websocket-e2e.log"
+      log_file: "monitoring-websocket-e2e.log"
 template_cluster_ssl: &template_cluster_ssl
   cluster:
-    websocket:
+    monitoring:
       args:
         [
           "--bolt-port",
@@ -23,16 +23,15 @@ template_cluster_ssl: &template_cluster_ssl
           *key_file,
           "--",
         ]
-      log_file: "websocket-ssl-e2e.log"
+      log_file: "monitoring-websocket-ssl-e2e.log"
       ssl: true
 
 workloads:
-  - name: "Websocket"
-    binary: "tests/e2e/websocket/memgraph__e2e__websocket"
+  - name: "Monitoring server using WebSocket"
+    binary: "tests/e2e/monitoring_server/memgraph__e2e__monitoring_websocket"
     args: ["--bolt-port", *bolt_port, "--monitoring-port", *monitoring_port]
     <<: *template_cluster
-  - name: "Websocket SSL"
-    binary: "tests/e2e/websocket/memgraph__e2e__websocket_ssl"
+  - name: "Monitoring server using WebSocket SSL"
+    binary: "tests/e2e/monitoring_server/memgraph__e2e__monitoring_websocket_ssl"
     args: ["--bolt-port", *bolt_port, "--monitoring-port", *monitoring_port]
     <<: *template_cluster_ssl
-
