--- a/tests/e2e/server/workloads.yaml
+++ b/tests/e2e/server/workloads.yaml
@@ -8,6 +8,7 @@ template_cluster: &template_cluster
       log_file: "server-connection-e2e.log"
 template_cluster_ssl: &template_cluster_ssl
   cluster:
+    server:
       args:
         [
           "--bolt-port",
@@ -30,4 +31,4 @@ workloads:
   - name: "Server SSL connection"
     binary: "tests/e2e/server/memgraph__e2e__server_ssl_connection"
     args: ["--bolt-port", *bolt_port]
-    <<: *template_cluster
+    <<: *template_cluster_ssl
