--- a/release/package/docker-compose.yml
+++ b/release/package/docker-compose.yml
@@ -4,6 +4,10 @@ services:
     build:
       context: centos-7
     container_name: "mgbuild_centos-7"
+  mgbuild_centos-9:
+    build:
+      context: centos-9
+    container_name: "mgbuild_centos-9"
   mgbuild_debian-10:
     build:
       context: debian-10
