Integrate v3 to cmake

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,6 +10,7 @@ add_subdirectory(telemetry)
 add_subdirectory(communication)
 add_subdirectory(memory)
 add_subdirectory(storage/v2)
+add_subdirectory(storage/v3)
 add_subdirectory(integrations)
 add_subdirectory(query)
 add_subdirectory(slk)
