[SQUASH ME] Initial check-in for getting feedback

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -15,6 +15,7 @@ add_subdirectory(query)
 add_subdirectory(slk)
 add_subdirectory(rpc)
 add_subdirectory(auth)
+add_subdirectory(io/v3)
 
 if (MG_ENTERPRISE)
   add_subdirectory(audit)
