Adding concurrency to cancel current workflow if one commits on the same branch.

--- a/.github/workflows/diff.yaml
+++ b/.github/workflows/diff.yaml
@@ -11,6 +11,9 @@ on:
       - "**/*.md"
       - ".clang-format"
       - "CODEOWNERS"
+  concurrency:
+    group: ${{ github.head_ref }}
+    cancel-in-progress: true
 
 jobs:
   community_build:
