Update docker release process (#421)
* Fix release directory

* Update release process

* Fix debian arm path

--- a/.github/workflows/package_all.yaml
+++ b/.github/workflows/package_all.yaml
@@ -174,5 +174,5 @@ jobs:
       - name: "Upload package"
         uses: actions/upload-artifact@v2
         with:
-          name: debian-11
-          path: build/output/debian-11/memgraph*.deb
+          name: debian-11-arm
+          path: build/output/debian-11-arm/memgraph*.deb
