--- a/tests/e2e/streams/CMakeLists.txt
+++ b/tests/e2e/streams/CMakeLists.txt
@@ -9,3 +9,5 @@ copy_streams_e2e_python_files(streams_owner_tests.py)
 copy_streams_e2e_python_files(pulsar_streams_tests.py)
 
 add_subdirectory(transformations)
+
+copy_e2e_python_files_from_parent_folder(streams ".." mg_utils.py)
