Move schema to storage v3

--- a/src/storage/v3/CMakeLists.txt
+++ b/src/storage/v3/CMakeLists.txt
@@ -10,6 +10,7 @@ set(storage_v3_src_files
     indices.cpp
     property_store.cpp
     vertex_accessor.cpp
+    schemas.cpp
     storage.cpp)
 
 # #### Replication #####
