Check-in in-progress work for raft test on top of simulator

--- a/tests/simulation/CMakeLists.txt
+++ b/tests/simulation/CMakeLists.txt
@@ -27,3 +27,5 @@ endfunction(add_simulation_test)
 add_simulation_test(future.cpp thread)
 
 add_simulation_test(basic_request.cpp address)
+
+add_simulation_test(raft.cpp address)
