--- a/src/query/v2/CMakeLists.txt
+++ b/src/query/v2/CMakeLists.txt
@@ -1,13 +1,13 @@
-define_add_lcp(add_lcp_query lcp_query_cpp_files generated_lcp_query_files)
+define_add_lcp(add_lcp_query lcp_query_2_cpp_files generated_lcp_query_2_files)
 
 add_lcp_query(frontend/ast/ast.lcp)
 add_lcp_query(frontend/semantic/symbol.lcp)
 add_lcp_query(plan/operator.lcp)
 
-add_custom_target(generate_lcp_query DEPENDS ${generated_lcp_query_files})
+add_custom_target(generate_lcp_query_2 DEPENDS ${generated_lcp_query_2_files})
 
 set(mg_query_sources
-    ${lcp_query_cpp_files}
+    ${lcp_query_2_cpp_files}
     common.cpp
     cypher_query_interpreter.cpp
     dump.cpp
@@ -43,23 +43,25 @@ set(mg_query_sources
 
 find_package(Boost REQUIRED)
 
-add_library(mg-query STATIC ${mg_query_sources})
-add_dependencies(mg-query generate_lcp_query)
-target_include_directories(mg-query PUBLIC ${CMAKE_SOURCE_DIR}/include)
-target_link_libraries(mg-query dl cppitertools Boost::headers)
-target_link_libraries(mg-query mg-integrations-pulsar mg-integrations-kafka mg-storage-v3 mg-license mg-utils mg-kvstore mg-memory)
+add_library(mg-query-v2 STATIC ${mg_query_sources})
+add_dependencies(mg-query-v2 generate_lcp_query_2)
+target_include_directories(mg-query-v2 PUBLIC ${CMAKE_SOURCE_DIR}/include)
+target_link_libraries(mg-query-v2 dl cppitertools Boost::headers)
+target_link_libraries(mg-query-v2 mg-integrations-pulsar mg-integrations-kafka mg-storage-v3 mg-license mg-utils mg-kvstore mg-memory)
+
 if(NOT "${MG_PYTHON_PATH}" STREQUAL "")
     set(Python3_ROOT_DIR "${MG_PYTHON_PATH}")
 endif()
+
 if("${MG_PYTHON_VERSION}" STREQUAL "")
     find_package(Python3 3.5 REQUIRED COMPONENTS Development)
 else()
     find_package(Python3 "${MG_PYTHON_VERSION}" EXACT REQUIRED COMPONENTS Development)
 endif()
-target_link_libraries(mg-query Python3::Python)
+
+target_link_libraries(mg-query-v2 Python3::Python)
 
 # Generate Antlr openCypher parser
-
 set(opencypher_frontend ${CMAKE_CURRENT_SOURCE_DIR}/frontend/opencypher)
 set(opencypher_generated ${opencypher_frontend}/generated)
 set(opencypher_lexer_grammar ${opencypher_frontend}/grammar/MemgraphCypherLexer.g4)
@@ -82,21 +84,21 @@ add_custom_command(
     OUTPUT ${antlr_opencypher_generated_src} ${antlr_opencypher_generated_include}
     COMMAND ${CMAKE_COMMAND} -E make_directory ${opencypher_generated}
     COMMAND
-        java -jar ${CMAKE_SOURCE_DIR}/libs/antlr-4.9.2-complete.jar
-            -Dlanguage=Cpp -visitor -package antlropencypher
-            -o ${opencypher_generated}
-            ${opencypher_lexer_grammar} ${opencypher_parser_grammar}
+    java -jar ${CMAKE_SOURCE_DIR}/libs/antlr-4.9.2-complete.jar
+    -Dlanguage=Cpp -visitor -package antlropencypher
+    -o ${opencypher_generated}
+    ${opencypher_lexer_grammar} ${opencypher_parser_grammar}
     WORKING_DIRECTORY "${CMAKE_BINARY_DIR}"
     DEPENDS
-        ${opencypher_lexer_grammar} ${opencypher_parser_grammar}
-        ${opencypher_frontend}/grammar/CypherLexer.g4
-        ${opencypher_frontend}/grammar/Cypher.g4)
+    ${opencypher_lexer_grammar} ${opencypher_parser_grammar}
+    ${opencypher_frontend}/grammar/CypherLexer.g4
+    ${opencypher_frontend}/grammar/Cypher.g4)
 
-add_custom_target(generate_opencypher_parser
+add_custom_target(generate_opencypher_parser_2
     DEPENDS ${antlr_opencypher_generated_src} ${antlr_opencypher_generated_include})
 
-add_library(antlr_opencypher_parser_lib STATIC ${antlr_opencypher_generated_src})
-add_dependencies(antlr_opencypher_parser_lib generate_opencypher_parser)
-target_link_libraries(antlr_opencypher_parser_lib antlr4)
+add_library(antlr_opencypher_parser_lib_2 STATIC ${antlr_opencypher_generated_src})
+add_dependencies(antlr_opencypher_parser_lib_2 generate_opencypher_parser_2)
+target_link_libraries(antlr_opencypher_parser_lib_2 antlr4)
 
-target_link_libraries(mg-query antlr_opencypher_parser_lib)
+target_link_libraries(mg-query-v2 antlr_opencypher_parser_lib_2)
