--- a/src/storage/v2/CMakeLists.txt
+++ b/src/storage/v2/CMakeLists.txt
@@ -11,6 +11,7 @@ set(storage_v2_src_files
     property_store.cpp
     vertex_accessor.cpp
     schemas.cpp
+    schema_validator.cpp
     storage.cpp)
 
 ##### Replication #####
