Address review comments

--- a/.github/workflows/release_centos8.yaml
+++ b/.github/workflows/release_centos8.yaml
@@ -128,7 +128,7 @@ jobs:
 
           # Build debug binaries.
           cd build
-          cmake ..sas
+          cmake ..
           make -j$THREADS
 
       - name: Run leftover CTest tests
