--- a/tests/unit/CMakeLists.txt
+++ b/tests/unit/CMakeLists.txt
@@ -77,7 +77,6 @@ target_link_libraries(${test_prefix}cypher_main_visitor mg-query)
 
 # add_unit_test(interpreter.cpp ${CMAKE_SOURCE_DIR}/src/glue/communication.cpp)
 # target_link_libraries(${test_prefix}interpreter mg-communication mg-query)
-
 add_unit_test(plan_pretty_print.cpp)
 target_link_libraries(${test_prefix}plan_pretty_print mg-query)
 
@@ -87,7 +86,6 @@ target_link_libraries(${test_prefix}query_cost_estimator mg-query)
 # TODO Fix later on
 # add_unit_test(query_dump.cpp ${CMAKE_SOURCE_DIR}/src/glue/communication.cpp)
 # target_link_libraries(${test_prefix}query_dump mg-communication mg-query)
-
 add_unit_test(query_expression_evaluator.cpp)
 target_link_libraries(${test_prefix}query_expression_evaluator mg-query)
 
@@ -97,12 +95,11 @@ target_link_libraries(${test_prefix}query_plan mg-query)
 add_unit_test(query_plan_accumulate_aggregate.cpp)
 target_link_libraries(${test_prefix}query_plan_accumulate_aggregate mg-query)
 
-add_unit_test(query_plan_bag_semantics.cpp)
-target_link_libraries(${test_prefix}query_plan_bag_semantics mg-query)
+# add_unit_test(query_plan_bag_semantics.cpp)
+# target_link_libraries(${test_prefix}query_plan_bag_semantics mg-query)
 
 # add_unit_test(query_plan_create_set_remove_delete.cpp)
 # target_link_libraries(${test_prefix}query_plan_create_set_remove_delete mg-query)
-
 add_unit_test(query_plan_edge_cases.cpp ${CMAKE_SOURCE_DIR}/src/glue/communication.cpp)
 target_link_libraries(${test_prefix}query_plan_edge_cases mg-communication mg-query)
 
@@ -285,7 +282,6 @@ target_link_libraries(${test_prefix}property_value_v2 mg-storage-v2 mg-utils)
 
 # add_unit_test(storage_v2.cpp)
 # target_link_libraries(${test_prefix}storage_v2 mg-storage-v2 storage_test_utils)
-
 add_unit_test(storage_v2_constraints.cpp)
 target_link_libraries(${test_prefix}storage_v2_constraints mg-storage-v2)
 
@@ -297,13 +293,11 @@ target_link_libraries(${test_prefix}storage_v2_decoder_encoder mg-storage-v2)
 
 # add_unit_test(storage_v2_edge.cpp)
 # target_link_libraries(${test_prefix}storage_v2_edge mg-storage-v2)
-
 add_unit_test(storage_v2_gc.cpp)
 target_link_libraries(${test_prefix}storage_v2_gc mg-storage-v2)
 
 # add_unit_test(storage_v2_indices.cpp)
 # target_link_libraries(${test_prefix}storage_v2_indices mg-storage-v2 mg-utils)
-
 add_unit_test(storage_v2_name_id_mapper.cpp)
 target_link_libraries(${test_prefix}storage_v2_name_id_mapper mg-storage-v2)
 
@@ -315,7 +309,6 @@ target_link_libraries(${test_prefix}storage_v2_property_store mg-storage-v2 fmt)
 
 # add_unit_test(storage_v2_replication.cpp)
 # target_link_libraries(${test_prefix}storage_v2_replication mg-storage-v2 fmt)
-
 add_unit_test(storage_v2_isolation_level.cpp)
 target_link_libraries(${test_prefix}storage_v2_isolation_level mg-storage-v2)
 
@@ -380,3 +373,6 @@ target_link_libraries(${test_prefix}storage_v3_query_plan_accumulate_aggregate m
 
 add_unit_test(storage_v3_query_plan_create_set_remove_delete.cpp)
 target_link_libraries(${test_prefix}storage_v3_query_plan_create_set_remove_delete mg-query)
+
+add_unit_test(storage_v3_query_plan_bag_semantics.cpp)
+target_link_libraries(${test_prefix}storage_v3_query_plan_bag_semantics mg-query)
