--- a/tests/unit/CMakeLists.txt
+++ b/tests/unit/CMakeLists.txt
@@ -100,8 +100,8 @@ target_link_libraries(${test_prefix}query_plan_accumulate_aggregate mg-query)
 
 # add_unit_test(query_plan_create_set_remove_delete.cpp)
 # target_link_libraries(${test_prefix}query_plan_create_set_remove_delete mg-query)
-add_unit_test(query_plan_edge_cases.cpp ${CMAKE_SOURCE_DIR}/src/glue/communication.cpp)
-target_link_libraries(${test_prefix}query_plan_edge_cases mg-communication mg-query)
+# add_unit_test(query_plan_edge_cases.cpp ${CMAKE_SOURCE_DIR}/src/glue/communication.cpp)
+# target_link_libraries(${test_prefix}query_plan_edge_cases mg-communication mg-query)
 
 add_unit_test(query_plan_match_filter_return.cpp)
 target_link_libraries(${test_prefix}query_plan_match_filter_return mg-query)
@@ -376,3 +376,6 @@ target_link_libraries(${test_prefix}storage_v3_query_plan_create_set_remove_dele
 
 add_unit_test(storage_v3_query_plan_bag_semantics.cpp)
 target_link_libraries(${test_prefix}storage_v3_query_plan_bag_semantics mg-query)
+
+add_unit_test(storage_v3_query_plan_edge_cases.cpp ${CMAKE_SOURCE_DIR}/src/glue/communication.cpp)
+target_link_libraries(${test_prefix}storage_v3_query_plan_edge_cases mg-communication mg-query)
